# corn

./: .gitignore  README.md  main.py  pyproject.toml
src/inference/: pop_price_inference.py
src/ml/: population_price_predictor.py
src/spark_mllib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
